# jet-array

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
jet_array/: __init__.py  log_space.py  log_space_jet_rules.py  log_space_ops.py
tests/: conftest.py  test_against_jax_jet.py  test_dynamic_slice_jet.py  test_dynamic_slice_jet_standalone.py  test_effective_order.py  test_erf_inv_taylor.py  test_log_space.py  test_log_space_rules.py  test_scan_jet.py
