[project]
name = "jet-array"
version = "0.1.0a1"
description = "Array-form Taylor-mode automatic differentiation in JAX"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Cambridge Yang", email = "camyang@csail.mit.edu" },
]
keywords = ["jax", "automatic-differentiation", "taylor-mode", "jet", "higher-order-derivatives"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.8,<0.11",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/thisiscam/jet-array"
Repository = "https://github.com/thisiscam/jet-array"
Issues = "https://github.com/thisiscam/jet-array/issues"

[project.optional-dependencies]
test = ["pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jet_array"]

[tool.pytest.ini_options]
testpaths = ["tests"]
